# mechforge

./: .gitignore  CLAUDE.md  README.md  mechforge-add.sh  mechforge_cli.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: code-review.md  coder.md  deep-dive.md
.claude/commands/: check-code.md  checkpoint.md  create-spec.md  expand-project.md  review-pr.md
.claude/skills/playwright-cli/: SKILL.md
.claude/templates/: app_spec.template.txt  coding_prompt.template.md  initializer_prompt.template.md  testing_prompt.template.md
api/: database.py  dependency_resolver.py
mcp_server/: feature_mcp.py
