[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mechforge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
# MCP server entry point — used in projects' .claude/settings.json
mechforge-mcp = "mcp_server.feature_mcp:main"
# CLI for add/update commands
mechforge = "mechforge_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "mcp_server*"]

[tool.setuptools]
# mechforge_cli is a single top-level module (not a package)
py-modules = ["mechforge_cli"]
